fix(perc-system): type Lucene search indexer/query rawtypes (#2998)
Continue #2022 residual after #2873 with real generics on:
- PSSearchIndexer/Impl update(Map<String,Object>) and delete(Collection<? extends PSSearchKey>)
- PSSearchQuery/Impl performSearch typed ctypeIds, fieldQueries, controlProps, List<PSSearchResult>
- PSSearchUtils.getFields Iterator<PSField>; PSSearchHandler call-site diamond
- Unit tests for stringFieldValues + typed query contract

No product behavior change. system clean install green.

Fixes #2998
Parent: #2022 / grandparent #2200

> Co-Authored by Grok Build using grok-4.5 with agent main.